--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,31 +1,38 @@
-[project]
-name="toml_base_model"
-version="0.1.0"
-description="Simple pydantic BaseModels extended with a model loader and dumper for YAML and TOML"
-authors=[{ name="Nuno Cravino", email="ncravino@users.noreply.github.com" }]
-dependencies=["pydantic>=2.10.3", "tomli>=2.2.1", "tomli-w>=1.1.0", "pyyaml>=6.0.2"]
-requires-python=">=3.10"
-readme="README.md"
-license={ text="MIT" }
-
 [build-system]
 requires=["pdm-backend"]
 build-backend="pdm.backend"
 
+[project]
+name="base_model_io"
+version="0.1.0"
+description="Simple pydantic BaseModels extended with a model loader and dumper for YAML and TOML"
+authors=[{ name="Nuno Cravino", email="ncravino@users.noreply.github.com" }]
+readme="README.md"
+license={ text="MIT" }
+requires-python=">=3.12,<3.13"
+# package dependencies
+dependencies=[
+    "pydantic>=2.10.3,<3.0.0", 
+    "tomli>=2.2.1,<2.3.0", 
+    "tomli-w>=1.1.0,<1.2.0", 
+    "pyyaml>=6.0.2,<6.1.0"
+]
+
 [dependency-groups]
-dev=['pytest']
+# not installed with the package (e.g. when using in another project)
+dev=[
+    "pytest>=8.3.4,<8.4.0",
+    "ruff>=0.8.0,<0.9.0",
+    "pyright>=1.1.390,<1.4.0",
+    "deptry>=0.22.0,<0.23.0",
+]
 
-docs=['mkdocs', 'mkdocstrings', 'mkdocstrings-python']
+docs=["mkdocs", "mkdocstrings", "mkdocstrings-python"]
 
-linting=['ruff']
-
-typechecking=['pyright']
-
+# you can also specify groups of groups
 all=[
-    { include-group='dev' },
-    { include-group='docs' },
-    { include-group='linting' },
-    { include-group='typechecking' },
+    { include-group="dev" },
+    { include-group="docs" },
 ]
 
 [tool.pdm]
@@ -33,20 +40,20 @@ distribution=true
 
 [tool.ruff]
 line-length=100
-target-version='py310'
+target-version="py312"
 
 [tool.ruff.lint]
 select=[
-    'I',   # isort
-    'A',   # flake8-builtins
-    'N',   # pep8-naming
-    'D',   # pydocstyle
-    'E',   # pycodestyle (Error)
-    'YTT', # flake8-2020
-    'B',   # flake8-bugbear
-    'T10', # flake8-debugger
-    'T20', # flake8-print
-    'C4',  # flake8-comprehensions
+    "I",   # isort
+    "A",   # flake8-builtins
+    "N",   # pep8-naming
+    "D",   # pydocstyle
+    "E",   # pycodestyle (Error)
+    "YTT", # flake8-2020
+    "B",   # flake8-bugbear
+    "T10", # flake8-debugger
+    "T20", # flake8-print
+    "C4",  # flake8-comprehensions
 ]
 
 ignore=[
@@ -55,7 +62,14 @@ ignore=[
 ]
 
 [tool.pdm.scripts]
-# format source and tests
-# ruff check source 
-# pyright source
-checkfix = "bash -c 'ruff format ./ && ruff check ./src --fix && pyright --level error --threads 2'"
+# bash -c so we don't affect the running environment
+## you can also specify without it
+# check dependencies, types and format source and tests
+## needs dev dependency group
+checkfix = "bash -c 'deptry ./src && ruff format ./ && ruff check ./src --fix && pyright --level error --threads 2'"
+check = "bash -c 'deptry ./src && ruff check ./src && pyright --level error --threads 2'"
+
+# needs doc depdency group
+builddocs = "bash -c 'cd docs && mkdocs build'"
+
+servedocs = "bash -c 'cd docs && mkdocs serve'"
